# pdfmixtool

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  README.md  TRANSLATORS.md  pdfmixtool.desktop  snapcraft.yaml
languages/: pdfmixtool_de.ts  pdfmixtool_en.ts  pdfmixtool_es.ts  pdfmixtool_fr.ts  pdfmixtool_id.ts  pdfmixtool_it.ts  pdfmixtool_ja.ts  pdfmixtool_nb_NO.ts  pdfmixtool_nl.ts  pdfmixtool_pt.ts  pdfmixtool_pt_BR.ts  pdfmixtool_ru.ts  pdfmixtool_tr.ts
resources/: eu.scarpetta.PDFMixTool.appdata.xml  eu.scarpetta.PDFMixTool.desktop
snap/: snapcraft.yaml
snap/gui/: pdfmixtool.desktop
src/: aboutdialog.cpp  aboutdialog.h  comboboxdelegate.cpp  comboboxdelegate.h  editmultipageprofiledialog.cpp  editmultipageprofiledialog.h  editpdfentrydialog.cpp  editpdfentrydialog.h  inputpdffiledelegate.cpp  inputpdffiledelegate.h  inputpdffilewidget.cpp  inputpdffilewidget.h  lineeditdelegate.cpp  lineeditdelegate.h  main.cpp  mainwindow.cpp  mainwindow.h  mouseeventfilter.cpp  mouseeventfilter.h  multipageprofilesmanager.cpp  multipageprofilesmanager.h  pdffile.cpp  pdffile.h
src/pdf_edit_lib/: definitions.h  pdfeditor.cpp  pdfeditor.h  pdffile.cpp  pdffile.h  pdffile_podofo.cpp  pdffile_podofo.h  podofo_pdffile.cpp  podofo_pdffile.h  podofo_pdftranslator.cpp  podofo_pdftranslator.h
